PCI: don't power-off apple thunderbolt controller on s2idle

On Macbook 2013 resuming from s2idle results in external monitor no
longer being detected, and dmesg having errors like:

    pcieport 0000:06:00.0: can't change power state from D3hot to D0 (config space inaccessible)

and a stacktrace. The reason turned out that the hw that the quirk
powers off does not get powered on back on resume.

Thus, add a check for s2idle to the quirk, and do nothing if the suspend
mode is s2idle.

Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=212767
Signed-off-by: Konstantin Kharlamov <Hi-Angel@yandex.ru>